Thu Jul 10 13:45:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/ORB_Local_Config/Two_DLL_ORB/Two_DLL_ORB.mpc:

          Both server and client are compiling the same files (I'm
          not sure why or if this is correct, but it was multi-build
          unsafe, which I have corrected).

        * tests/ORB_Local_Config/Two_DLL_ORB/client.cpp:
        * tests/ORB_Local_Config/Two_DLL_ORB/server.cpp:
        * tests/ORB_Local_Config/Two_DLL_ORB/ORB_DLL.h:
        * tests/ORB_Local_Config/Two_DLL_ORB/ORB_DLL.cpp:
        * tests/ORB_Local_Config/Bug_2612/DllOrb.h:
        * tests/ORB_Local_Config/Bug_2612/DllOrb.cpp:
        * tests/ORB_Local_Config/Bug_2612/Test.cpp:
        * tests/ORB_Local_Config/Service_Dependency/Test.cpp:
        * tests/ORB_Local_Config/Separation/Test.cpp:
        * tests/ORB_Local_Config/Bunch/Test.cpp:
        * utils/catior/catior.cpp:

          Added/Corrected wide-character compatablity.

Thu Jul 10 09:52:15 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * docs/compiler.html:
          Added documentation about -Se tao_idl option.

        * TAO_IDL/be/be_global.cpp:
          Updated help message for -Se option.

        * TAO_IDL/include/fe_extern.h:
        * TAO_IDL/fe/fe_init.cpp:
          Added FE_extract_env_include_paths which extracts include
          paths from INCLUDE environment variable.

        * TAO_IDL/util/utl_global.cpp:
          Updated the algorithm implemented for bug 3154 to make it more
          maintainable.

Wed Jul 09 13:30:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/TransportCurrent/lib/Client_Request_Interceptor.cpp:
        * tests/TransportCurrent/lib/Server_Request_Interceptor.cpp:
        * tests/Big_Reply/client.cpp:
        * tests/Bug_3251_Regression/PersistentPoa.h:
        * tests/Bug_3251_Regression/PersistentPoa.cpp:
        * tests/TransportCurrent/Framework/server.cpp: