@@ -24,7 +24,7 @@ class Server_Task : public ACE_Task_Base
 {
 public:
   /// Constructor
-  Server_Task (const char *output,
+  Server_Task (const ACE_TCHAR *output,
                CORBA::ORB_ptr sorb,
                ACE_Manual_Event &me,
                ACE_Thread_Manager *thr_mgr);
@@ -37,7 +37,7 @@ public:
 
 private:
   /// Output file for IOR
-  const char *output_;
+  const ACE_TCHAR *output_;
 
   /// Manual event to wake up the main thread to create a client
   /// thread.
